Build complet et mise à jour 1.002i

--- a/backend/client/index.html
+++ b/backend/client/index.html
@@ -15,7 +15,7 @@
     <title>Parlons cartons</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app.Alana</noscript>
     <div id="root"></div>
   </body>
 </html>
